# senate

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  CLAUDE.md  README.md  package-lock.json  package.json
backend/: .dockerignore  .env.example  Dockerfile  conftest.py  pyproject.toml  requirements.prod.txt  requirements.txt
backend/app/: __init__.py  config.py  database.py  main.py  static_pages.py
backend/app/admin/: page.tsx
backend/app/committees/: page.tsx
backend/app/dependencies/: __init__.py  auth.py
backend/app/elections/: page.tsx
backend/app/legislation/: page.tsx
backend/app/models/: Admin.py  BudgetData.py  CalendarEvent.py  CarouselSlide.py  FinanceHearingConfig.py  FinanceHearingDate.py  Legislation.py  LegislationAction.py  Senator.py  __init__.py  cms.py
backend/app/news/: page.tsx
backend/app/routers/: auth.py  budget.py  carousel.py  committees.py  contact.py  districts.py  events.py  finance.py  health.py  leadership.py  legislation.py  news.py  pages.py  senators.py  staff.py  uploads.py
backend/app/schemas/: AccountDTO.py  BudgetDataDTO.py  CalendarEventDTO.py  CarouselSlideDTO.py  CommitteeAssignmentDTO.py  CommitteeDTO.py  DistrictDTO.py  FinanceHearingConfigDTO.py  FinanceHearingDateDTO.py  LeadershipDTO.py  LegislationActionDTO.py  LegislationDTO.py  NewsDTO.py  SenatorDTO.py  StaffDTO.py  (+15 more)
backend/script/: __init__.py  create_db.py  create_test_db.py  init_db.py  reset_dev.py  seed_data.py
backend/tests/: __init__.py  conftest.py  test_auth.py  test_legislation.py  test_main.py  test_models.py  test_static_pages.py
(+224 files in other folders)
