[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "senate-backend"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.0",
    "sqlalchemy==2.0.38",
    "pyodbc==5.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest==8.3.5",
    "pytest-asyncio==0.25.2",
    "httpx==0.28.1",
    "ruff==0.9.3",
    "junitparser==3.2.0",
]

# Only package app/ — setuptools would otherwise pick up script/ and tests/ too
[tool.setuptools.packages.find]
include = ["app*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
addopts = [
    "--tb=short",
    "--strict-markers",
    "-v",
    "--junitxml=test-results.xml",
]
markers = [
    "integration: marks tests that require a live database connection",
]

[tool.ruff]
target-version = "py313"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]
